gluecodium/src/test/resources/smoke/errors/output/lime/smoke/SomeTypeCollection.lime
package smoke
struct SomeTypeCollection {
    enum SomeTypeCollectionError {
        ERROR_A,
        ERROR_B
    }
    exception Some(SomeTypeCollectionError)
}
